add permissions_info query parameter and field to releases
