# docs/swagger.json
@@ -1180,6 +1180,20 @@
                 "value": {}
             }
         },
+        "model.PermissionsInfo": {
+            "type": "object",
+            "properties": {
+                "permissions": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "boolean"
+                    }
+                },
+                "shared": {
+                    "type": "boolean"
+                }
+            }
+        },
         "model.SmartServiceDesign": {
             "type": "object",
             "properties": {
@@ -1378,6 +1392,10 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "permissions_info": {
+                    "description": "optional, set if query parameter permissions_info=true",
+                    "$ref": "#/definitions/model.PermissionsInfo"
                 }
             }
         }
