# pkg/model/model.go
@@ -27,12 +27,18 @@ type SmartServiceDesign struct {
 
 //cqrs
 type SmartServiceRelease struct {
-	Id          string `json:"id" bson:"id"`
-	DesignId    string `json:"design_id" bson:"design_id"`
-	Name        string `json:"name" bson:"name"`
-	Description string `json:"description" bson:"description"`
-	CreatedAt   int64  `json:"created_at" bson:"created_at"` //unix timestamp, set by service on creation
-	Error       string `json:"error,omitempty" bson:"error"` //is set if errors occurred while releasing
+	Id              string           `json:"id" bson:"id"`
+	DesignId        string           `json:"design_id" bson:"design_id"`
+	Name            string           `json:"name" bson:"name"`
+	Description     string           `json:"description" bson:"description"`
+	CreatedAt       int64            `json:"created_at" bson:"created_at"` //unix timestamp, set by service on creation
+	Error           string           `json:"error,omitempty" bson:"error"` //is set if errors occurred while releasing
+	PermissionsInfo *PermissionsInfo `json:"permissions_info,omitempty"`   //optional, set if query parameter permissions_info=true
+}
+
+type PermissionsInfo struct {
+	Shared      bool            `json:"shared"`
+	Permissions map[string]bool `json:"permissions"`
 }
 
 type SmartServiceReleaseExtended struct {
